# dde-tray-loader

./: CMakeLists.txt  REUSE.toml  dde-tray-loader.pc.in
plugins/: CMakeLists.txt
plugins/application-tray/: CMakeLists.txt  abstracttrayprotocol.h  application-tray.qrc  ddeindicatortrayprotocol.cpp  ddeindicatortrayprotocol.h  fdoselectionmanager.cpp  fdoselectionmanager.h  sniprotocolhandler.cpp  sniprotocolhandler.h  traymanager1.cpp  traymanager1.h  trayplugin.cpp  traywidget.cpp  traywidget.h  util.cpp  util.h  xcbthread.cpp  xcbthread.h  xembedprotocolhandler.cpp  xembedprotocolhandler.h
plugins/application-tray/api/dbus/: org.kde.StatusNotifierItem.xml
plugins/dde-dock/: CMakeLists.txt
plugins/dde-dock/airplane-mode/: CMakeLists.txt  airplanemodecontroller.cpp  airplanemodecontroller.h  airplanemodeitem.cpp  airplanemodeplugin.cpp  airplanemodeplugin.h
plugins/dde-dock/bluetooth/: CMakeLists.txt  bluetoothitem.cpp  bluetoothplugin.cpp  quickpanelwidget.cpp  quickpanelwidget.h
plugins/dde-dock/bluetooth/componments/: adaptersmanager.cpp  adaptersmanager.h  bluetoothadapteritem.cpp  bluetoothadapteritem.h  bluetoothapplet.cpp  bluetoothapplet.h
plugins/dde-dock/brightness/: CMakeLists.txt  brightness-constants.h  brightnessapplet.cpp  brightnessapplet.h  brightnesscontroller.cpp  brightnesscontroller.h  brightnessitem.cpp  brightnessmodel.cpp  brightnessquickpanel.cpp  brightnessquickpanel.h  monitor.h
plugins/dde-dock/common/: abstractplugincontroller.cpp  abstractplugincontroller.h  commonapplet.cpp  commonapplet.h  commoniconbutton.cpp  commoniconbutton.h  commontextbutton.cpp  commontextbutton.h  dockslider.cpp  jumpsettingbutton.cpp  jumpsettingbutton.h  mousestatewidget.cpp  plugin-wrapper.cpp  plugin-wrapper.h  pluginitemdelegate.cpp  pluginitemdelegate.h  plugins-logging-category.h  quickdragcore.cpp  quickdragcore.h  settingmanager.cpp  singlequickpanel.cpp  singlequickpanel.h  slidercontainer.cpp  slidercontainer.h  touchscrollfilter.cpp  touchscrollfilter.h
plugins/dde-dock/configs/: org.deepin.dde.dock.plugin.bluetooth.json  org.deepin.dde.dock.plugin.notification.json  org.deepin.dde.dock.plugin.power.json
plugins/dde-dock/datetime/: CMakeLists.txt  datetime.json  datetimeplugin.cpp  datetimeplugin.h  datetimewidget.cpp  datetimewidget.h  regionFormat.cpp  regionFormat.h
plugins/dde-dock/datetime/calendar/: calendarmanager.h  commondef.h  jumpcalendarbutton.cpp  lunarmanager.cpp  pagebutton.cpp  pagebutton.h  sidebarcalendarwidget.cpp  sidebarcalendarwidget.h
plugins/dde-dock/dbus/: dbusclientmanager.h  dbusdisplay.cpp  dbusdisplay.h  dbusdockadaptors.cpp  dbusdockadaptors.h  dbusmenu.cpp  dbusmenu.h  dbusmenumanager.cpp  org_kde_kwin.cpp  org_kde_kwin.h  org_kde_kwin_effects.cpp  org_kde_kwin_effects.h
plugins/dde-dock/dbus/sni/: statusnotifierwatcher_interface.cpp  statusnotifierwatcher_interface.h
plugins/dde-dock/dbus/xml/: org.deepin.dde.Appearance1.xml  org.deepin.dde.Network1.xml  org.deepin.dde.SessionManager.xml  org.deepin.dde.Timedate1.xml
plugins/dde-dock/disk-mount/: CMakeLists.txt  diskcontrolwidget.cpp
plugins/dde-dock/disk-mount/dbus/: dbusdiskmount.cpp  dbusdiskmount.h
plugins/dde-dock/dnd-mode/: CMakeLists.txt  dndmodecontroller.h  dndmodeitem.cpp
plugins/dde-dock/eye-comfort-mode/: CMakeLists.txt  eye-comfort-mode.json  eyecomfortmodeapplet.cpp  eyecomfortmodeapplet.h  eyecomfortmodecontroller.cpp  eyecomfortmodecontroller.h  eyecomfortmodeitem.cpp  eyecomfortmodeitem.h  quickpanelwidget.cpp  quickpanelwidget.h
plugins/dde-dock/keyboard-layout/: CMakeLists.txt  dbusadaptors.cpp  dbusadaptors.h  keyboardplugin.cpp
plugins/dde-dock/media/: CMakeLists.txt  mediacontroller.cpp  mediacontroller.h  mediaplugin.cpp  mediaplugin.h  quickpanelwidget.cpp  quickpanelwidget.h
plugins/dde-dock/media/resources/: media.qrc
plugins/dde-dock/notification/: CMakeLists.txt  notification.cpp  notification.h  notificationplugin.cpp  notificationplugin.h
plugins/dde-dock/onboard/: CMakeLists.txt  onboarditem.cpp  onboardplugin.cpp  onboardplugin.h
plugins/dde-dock/power/: CMakeLists.txt  performancemodecontroller.h  powerapplet.cpp  powerapplet.h  powerplugin.cpp  powerplugin.h  powerstatuswidget.cpp
plugins/dde-dock/power/dbus/: dbusaccount.h  (+2 more)
plugins/dde-dock/shutdown/: CMakeLists.txt  shutdownplugin.cpp  shutdownplugin.h
plugins/dde-dock/sound/: CMakeLists.txt  sound.json  soundapplet.cpp  soundapplet.h  soundcontroller.cpp  soundcontroller.h  soundquickpanel.cpp  soundquickpanel.h  soundview.cpp  soundview.h
plugins/dde-dock/translations/: dde-dock.ts  dde-dock_ady.ts  dde-dock_af.ts  dde-dock_af_ZA.ts  dde-dock_ak.ts  dde-dock_am.ts  dde-dock_am_ET.ts  dde-dock_ar.ts  dde-dock_ar_EG.ts  dde-dock_ast.ts  dde-dock_az.ts  dde-dock_bg.ts  dde-dock_bn.ts  dde-dock_bo.ts  dde-dock_bqi.ts  dde-dock_br.ts  dde-dock_ca.ts  dde-dock_cgg.ts  dde-dock_cs.ts  dde-dock_da.ts  dde-dock_de.ts  dde-dock_de_CH.ts  dde-dock_de_DE.ts  dde-dock_el.ts  dde-dock_el_GR.ts  dde-dock_en_AU.ts  dde-dock_en_GB.ts  dde-dock_en_NO.ts  dde-dock_en_US.ts  dde-dock_eo.ts  dde-dock_es.ts  dde-dock_es_419.ts  dde-dock_es_AR.ts  dde-dock_es_CL.ts  dde-dock_es_MX.ts  dde-dock_et.ts  dde-dock_eu.ts  dde-dock_fa.ts  dde-dock_fi.ts  dde-dock_fil.ts  (+65 more)
plugins/dde-dock/util/: roundscrollarea.cpp  touchsignalmanager.cpp  utils.h
plugins/dde-dock/widgets/: singlecontentwidget.h  tipswidget.cpp  tipswidget.h
plugins/dde-network-core/: CMakeLists.txt
plugins/dde-network-core/dock-network-plugin/: CMakeLists.txt  dockcontentwidget.h  networkplugin.cpp  networkplugin.h  quickpanelwidget.cpp
plugins/dde-network-core/dock-tray-network-plugin/: CMakeLists.txt  network.json  networkplugin.cpp
plugins/dde-network-core/network-service-plugin/: CMakeLists.txt  ipconflicthandler.cpp
plugins/dde-network-core/src/: CMakeLists.txt  configsetting.cpp  networkcontroller.cpp  proxycontroller.cpp
plugins/dde-network-display-ui/plugins/: CMakeLists.txt
plugins/libdbusmenuqt/: dbusmenuimporter.cpp  dbusmenuimporter.h
plugins/notification/: CMakeLists.txt
(+188 files in other folders)
